--- a/Burger Empire/author.html
+++ b/Burger Empire/author.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="It all began in 2015 when we opened our hamburger restaurant in Belgrade. We wanted to serve good, affordable food of the highest quality. Every day, more than 200 guests visit BURGER EMPIRE restaurant. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. We are number one quality burger restaurant in Serbia">
+    <meta name="keywords" content="burger, chicken burger, restaurant, menu">
+    <meta name="author" content="Vladimir Ješić">
     <title>Burger empire - Author</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
+    <link rel="icon" type="image" href="assets/images/icon.ico">
     <script src="https://kit.fontawesome.com/c5809f1bc7.js" crossorigin="anonymous"></script>
 </head>
 <body>
