--- a/Burger Empire/gallery.html
+++ b/Burger Empire/gallery.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="It all began in 2015 when we opened our hamburger restaurant in Belgrade. We wanted to serve good, affordable food of the highest quality. Every day, more than 200 guests visit BURGER EMPIRE restaurant. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. We are number one quality burger restaurant in Serbia">
+    <meta name="keywords" content="burger, chicken burger, restaurant, menu">
+    <meta name="author" content="Vladimir Ješić">
     <title>Burger empire - Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
+    <link rel="icon" type="image" href="assets/images/icon.ico">
     <script src="https://kit.fontawesome.com/c5809f1bc7.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -53,37 +57,37 @@
         </div>
 
         <div class="row d-flex justify-content-evenly pb-5">
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery1.jpg" class="img-thumbnail" alt="Burger on plate">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery2.jpg" class="img-thumbnail" alt="Three burgers">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery3.jpg" class="img-thumbnail" alt="Burger with fries">
             </div>
         </div>
 
         <div class="row d-flex justify-content-evenly pb-5">
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery4.jpg" class="img-thumbnail" alt="Table">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery5.jpg" class="img-thumbnail" alt="Meal">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery6.jpg" class="img-thumbnail" alt="People in restaurant">
             </div>
         </div>
 
         <div class="row d-flex justify-content-evenly pb-5">
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery7.jpg" class="img-thumbnail" alt="Three beers">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery8.jpg" class="img-thumbnail" alt="Guiness beer">
             </div>
-            <div class="col-12 col-lg-3">
+            <div class="col-12 col-lg-3 mb-5">
                 <img src="assets/images/gallery9.jpg" class="img-thumbnail" alt="Beer">
             </div>
         </div>
