--- a/Burger Empire/index.html
+++ b/Burger Empire/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="It all began in 2015 when we opened our hamburger restaurant in Belgrade. We wanted to serve good, affordable food of the highest quality. Every day, more than 200 guests visit BURGER EMPIRE restaurant. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. We are number one quality burger restaurant in Serbia">
+    <meta name="keywords" content="burger, chicken burger, restaurant, menu">
+    <meta name="author" content="Vladimir Ješić">
     <title>Burger empire - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
+    <link rel="icon" type="image" href="assets/images/icon.ico">
     <script src="https://kit.fontawesome.com/c5809f1bc7.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -58,7 +62,7 @@
           <h2 class="text-center"> BEST OFFERS</h2>
         </div>
       </div>
-      <div class="container w-100 d-flex justify-content-center p-5">
+      <div class="container d-flex justify-content-center p-5">
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -66,22 +70,22 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active w-100">
-              <img src="assets/images/burger4.jpg" class="d-block w-100" alt="Chicken burger">
+            <div class="carousel-item active">
+              <img src="assets/images/burger4o.jpg" class="d-block" alt="Chicken burger">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Chicken Burger</h5>
                 <p>110g chicken, BBQ and Horseradish sauce, Lettuce, Tomato, Pickles, Purple onion</p>
               </div>
             </div>
-            <div class="carousel-item w-100">
-              <img src="assets/images/burger2.jpg" class="d-block w-100" alt="Bacon Beef Burger">
+            <div class="carousel-item">
+              <img src="assets/images/burger2o.jpg" class="d-block" alt="Bacon Beef Burger">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Bacon Beef Burger</h5>
                 <p>150g of fresh beef, Fried bacon, Lettuce, Tomato, Pickles, Red onion, Mustard sauce</p>
               </div>
             </div>
-            <div class="carousel-item w-100">
-              <img src="assets/images/burger6.jpg" class="d-block w-100" alt="Double Chicken Burger">
+            <div class="carousel-item">
+              <img src="assets/images/burger6o.jpg" class="d-block" alt="Double Chicken Burger">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Double Chicken Burger</h5>
                 <p>220g chicken, BBQ and Horseradish sauce, Lettuce, Tomato, Pickles, Purple onion</p>
@@ -116,13 +120,13 @@
           <div class="col-sm-12 col-md-5">
             <div class="row d-flex justify-content-between">
               <div class="col-12 pb-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>It all began in 2015 when we opened our hamburger restaurant in Belgrade. We wanted to serve good, affordable food of the highest quality.</p>
               </div>
               <div class="col-12 pb-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>The best burgers require the best ingredients. But just as important is having the right staff with a passion for quality. We are always looking for people who want to help us deliver great taste to our customers. As an employee, you recieve extensive training and continuing education.</p>
               </div>
               <div class="col-12 pb-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Every day, more than 200 guests visit BURGER EMPIRE restaurant. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. We are number one quality burger restaurant in Serbia</p>
               </div>
             </div>
           </div>
@@ -144,7 +148,7 @@
           <div class="col-12 col-lg-3 brdr-r">
             <p>I</p>
             <p>Contact form</p>
-            <form action="#" method="post" id="contact-form">
+            <form action="#" method="post" id="contact-form" class="pb-5">
               <label for="fname">Name</label>
               <br/>
               <input type="text" placeholder="Your name..." id="fname"/>
@@ -164,9 +168,9 @@
               <input type="button" class="btn btnc" value="Submit question" id="btn"/>
           </form>
           </div>
-          <div class="col-12 col-lg-3">
+          <div class="col-12 col-lg-3 pb-5">
             <p>II</p>
-            <p>Via social networks</p>
+            <p>Social networks</p>
             <a href="https://www.facebook.com/vladimir.jesic/" target="_blank"><i class="fa-brands fa-facebook pad"></i></a>
             <br>
             <p>Burger Empire</p>
@@ -175,9 +179,9 @@
             <br>
             <p>burger_empire</p>
           </div>
-          <div class="col-12 col-lg-3 brdr-l">
+          <div class="col-12 col-lg-3 brdr-l pb-5">
             <p>III</p>
-            <p>Give me a call or write me an email</p>
+            <p>Give us a call or write us an email</p>
             <i class="fa-solid fa-phone pad"></i>
             <p>+381 62 556 346</p>
             <i class="fa-solid fa-envelope pad pad1"></i>
