--- a/Burger Empire/menu.html
+++ b/Burger Empire/menu.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="It all began in 2015 when we opened our hamburger restaurant in Belgrade. We wanted to serve good, affordable food of the highest quality. Every day, more than 200 guests visit BURGER EMPIRE restaurant. And they do so because our restaurants are known for serving high-quality, great-tasting, and affordable food. We are number one quality burger restaurant in Serbia">
+    <meta name="keywords" content="burger, chicken burger, restaurant, menu">
+    <meta name="author" content="Vladimir Ješić">
     <title>Burger empire - Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
+    <link rel="icon" type="image" href="assets/images/icon.ico">
     <script src="https://kit.fontawesome.com/c5809f1bc7.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -63,7 +67,7 @@
         </div>
         <div class="row d-flex justify-content-evenly text-center">
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger1.jpg" class="card-img-top" alt="Regular Burger">
                     <div class="card-body">
                       <h5 class="card-title">Regular Burger</h5>
@@ -93,7 +97,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger2.jpg" class="card-img-top" alt="Bacon Burger">
                     <div class="card-body">
                       <h5 class="card-title">Bacon Burger</h5>
@@ -123,7 +127,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger3.jpg" class="card-img-top" alt="Cheeseburger">
                     <div class="card-body">
                       <h5 class="card-title">Cheeseburger</h5>
@@ -160,7 +164,7 @@
         </div>
         <div class="row d-flex justify-content-evenly text-center">
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger4.jpg" class="card-img-top" alt="Regular Chicken Burger">
                     <div class="card-body">
                       <h5 class="card-title">Regular Chicken Burger</h5>
@@ -190,7 +194,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger5.jpg" class="card-img-top" alt="Chicken Cheeseburger">
                     <div class="card-body">
                       <h5 class="card-title">Chicken Cheeseburger</h5>
@@ -220,7 +224,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/burger6.jpg" class="card-img-top" alt="Double Chicken Cheeseburger">
                     <div class="card-body">
                       <h5 class="card-title">Double Chicken Cheeseburger</h5>
@@ -257,7 +261,7 @@
         </div>
         <div class="row d-flex justify-content-evenly text-center">
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/fries.jpg" class="card-img-top" alt="Fries">
                     <div class="card-body">
                       <h5 class="card-title">Fries</h5>
@@ -287,7 +291,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/onion.jpg" class="card-img-top" alt="Onion rings">
                     <div class="card-body">
                       <h5 class="card-title">Onion Rings</h5>
@@ -317,7 +321,7 @@
             </div>
 
             <div class="col-12 col-lg-3 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+                <div class="card mb-5" style="width: 18rem;">
                     <img src="assets/images/sauces.jpg" class="card-img-top" alt="Sauces">
                     <div class="card-body">
                       <h5 class="card-title">Sauces</h5>
